# osod24_firmware

./: CMakeLists.txt
libs/: CMakeLists.txt
libs/bno080/: CMakeLists.txt
libs/bno080/include/: bno080.h
libs/bno080/src/: bno080.cpp
libs/common/: CMakeLists.txt
libs/common/include/: interfaces.h  types.h  utils.h
libs/common/src/: utils.cpp
libs/communicator/: CMakeLists.txt
libs/communicator/include/: communicator.h  payloads.h
libs/communicator/src/: communicator.cpp
libs/config/include/: drivetrain_config.h
libs/mixer/include/: ackermann_strategy.h  mixer_strategy.h  tank_steer_strategy.h
libs/mixer/src/: ackermann_strategy.cpp  tank_steer_strategy.cpp
libs/navigator/: CMakeLists.txt
libs/navigator/include/: navigator.h
libs/navigator/src/: navigator.cpp
libs/state_estimator/: CMakeLists.txt
libs/state_estimator/include/: state_estimator.h
libs/state_estimator/src/: state_estimator.cpp
libs/statemanager/: CMakeLists.txt
libs/statemanager/include/: statemanager.h
libs/statemanager/src/: statemanager.cpp
libs/stoker/: CMakeLists.txt
libs/stoker/include/: stoker.h
libs/stoker/src/: stoker.cpp
libs/usb_serial/src/: USB_Serial.c
src/: main.cpp
