add_subdirectory(balance_port)
add_subdirectory(common)
add_subdirectory(communicator)
add_subdirectory(config)
add_subdirectory(bno080)
add_subdirectory(navigator)
add_subdirectory(receiver)
add_subdirectory(state_estimator)
add_subdirectory(statemanager)
add_subdirectory(stoker)
add_subdirectory(tf_luna)
add_subdirectory(mixer)
add_subdirectory(sbus_2040)
add_subdirectory(serialtransfer)
add_subdirectory(usb_serial)
add_subdirectory(waypoint_navigation)